--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -21,6 +21,7 @@ body {
   font-family: $font-jockey-one;
   font-size: 1.2rem;
   position: relative;
+  overflow-x: hidden;
 
   .visually-hidden {
     clip: rect(0 0 0 0);
@@ -186,11 +187,12 @@ body {
         width: 100%;
 
         position: relative;
+        background-image: url("/assets/photos/green-cabbage-vegetable.jpg");
+        background-size: cover;
+        background-position: center;
+        aspect-ratio: 1 / 1;
+        // margin: 1rem;
 
-        .cabbage-img {
-          width: 100%;
-          height: 100%;
-        }
         .cabbage-arrow {
           position: absolute;
           left: 7%;
