--- a/css/_tablet.scss
+++ b/css/_tablet.scss
@@ -1,5 +1,4 @@
 body {
-  overflow-x: hidden;
   .grid-menu-main {
     display: grid;
     grid-template-columns: repeat(6, minmax(0, 1fr));
